kustomize-units/flux-system/base/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-sylva-operators
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: source-controller
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: workload-cluster-operator-system
      podSelector:
        matchLabels:
          control-plane: controller-manager
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: sylva-units-operator-system
      podSelector:
        matchLabels:
          control-plane: controller-manager
    ports:
    - protocol: TCP
      port: http
